fixed wallet service logic and user authentication & authorization
